[package]
name = "metadata-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"
actix-rt = "2.8.0"
actix-cors = "0.6.4"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confy = { version = "0.5.1", default-features = false, features = ["yaml_conf"] }

expanduser = "1.2.2"

anyhow = "1"

reqwest = { version = "0.11.16", features = ["json"] }
ulid = "1"
